web-sys_canvas_hello_world/target/rls/debug/build/anyhow-ea1f5e41b5dd99d7/stderr
error[E0432]: unresolved import `std::backtrace`
 --> /Users/Jeroen/git-projects-jeroen/rust_learning/web-sys_canvas_hello_world/target/rls/debug/build/anyhow-ea1f5e41b5dd99d7/out/probe.rs:5:14
  |
5 |     use std::backtrace::{Backtrace, BacktraceStatus};
  |              ^^^^^^^^^ could not find `backtrace` in `std`

error[E0407]: method `backtrace` is not a member of trait `Error`
  --> /Users/Jeroen/git-projects-jeroen/rust_learning/web-sys_canvas_hello_world/target/rls/debug/build/anyhow-ea1f5e41b5dd99d7/out/probe.rs:19:9
   |
19 | /         fn backtrace(&self) -> Option<&Backtrace> {
20 | |             let backtrace = Backtrace::capture();
21 | |             match backtrace.status() {
22 | |                 BacktraceStatus::Captured | BacktraceStatus::Disabled | _ => {}
23 | |             }
24 | |             unimplemented!()
25 | |         }
   | |_________^ not a member of trait `Error`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0407, E0432.
For more information about an error, try `rustc --explain E0407`.
